feat: multi feature and add docs
